# esp32-llm

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
.cursor/rules/: proj.mdc
components/llm/: CMakeLists.txt
components/llm/assets/: README.md
components/llm/include/: llm.h  memory_utils.h
components/llm/src/: llm.c  memory_utils.c
components/llm/src/asm/: float_div.S
components/web/: CMakeLists.txt  idf_component.yml
components/web/include/: README.md  web_server.h  wifi_config.h  wifi_config.h.template  wifi_manager.h
components/web/src/: web_server.c  wifi_manager.c
main/: CMakeLists.txt  idf_component.yml  main.c
